// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages with children 1`] = `
<div
  className="sc-bdVaJa gAeFo"
>
  <span>
    message
  </span>
</div>
`;

exports[`messages with no children 1`] = `
<div
  className="sc-bdVaJa gAeFo"
/>
`;
